fix: allow landing page to scroll by removing overflow:hidden on home nav container
The navigation-drawer-content.home had overflow:hidden + fixed height
which clipped the new long-form landing page to one viewport height.

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -140,11 +140,7 @@
 
 .navigation-drawer-content {
     &.home {
-        height: calc(100vh - 64px);
-        overflow: hidden;
-    }
-    &.home.sm {
-        height: calc(100vh - 56px);
+        overflow: visible;
     }
 }
 
